--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "messenger-web",
   "version": "0.0.0",
   "private": true,
+  "description": "A Messenger web client developed by nextjs.",
   "keywords": [
     "messenger",
     "react",
     "nextjs"
   ],
-  "author": "Weajer Zon<weajer.zon@gmail.com>",
+  "author": "Wesley Zon<wzono.me@gmail.com>",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
