--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@weajer/eslint-config": "^0.0.1",
+    "@wzono/eslint-config": "^0.0.1",
     "simple-git-hooks": "^2.8.1"
   },
   "packageManager": "pnpm@8.5.1",
