--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
     "semi": [2, "always"],
     "eol-last": ["error", "always"],
     "no-undef": "off",
+    "no-unused-vars": [1],
+    "jsx-quotes": ["error", "prefer-double"],
     "react/jsx-sort-props": [
       "error",
       {
@@ -16,6 +18,7 @@
     "react/jsx-first-prop-new-line": ["error", "multiline-multiprop"],
     "react/jsx-props-no-multi-spaces": ["error"],
     "react/jsx-one-expression-per-line": ["error"],
+    "react/jsx-closing-bracket-location": ["error"],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
     "react/jsx-max-props-per-line": [
