--- a/package.json
+++ b/package.json
@@ -2,26 +2,23 @@
   "name": "messenger-web",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@8.5.1",
   "description": "A Messenger web client developed by nextjs.",
+  "author": "Wesley Zon<wzono.me@gmail.com>",
   "keywords": [
     "messenger",
     "react",
     "nextjs"
   ],
-  "author": "Wesley Zon<wzono.me@gmail.com>",
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lint:fix": "next lint --fix --cache",
     "start": "next start"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --cache --fix"
-    ]
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -43,11 +40,15 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@wzono/eslint-config": "^0.0.1",
+    "@wzono/eslint-config": "^0.1.0",
     "simple-git-hooks": "^2.8.1"
   },
-  "packageManager": "pnpm@8.5.1",
-  "engines": {
-    "node": ">=16"
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,json}": [
+      "eslint --cache --fix"
+    ]
   }
 }
