--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix --cache",
-    "start": "next start"
+    "start": "next start",
+    "db:push": "dotenv -e .env.local -- pnpx prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@wzono/eslint-config": "^0.1.0",
+    "dotenv-cli": "^7.2.1",
     "simple-git-hooks": "^2.8.1"
   },
   "simple-git-hooks": {
