--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "db:push": "dotenv -e .env.local -- pnpx prisma db push"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "react": "18.2.0",
@@ -42,6 +45,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@wzono/eslint-config": "^0.1.0",
     "dotenv-cli": "^7.2.1",
