--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=18"
   },
   "scripts": {
+    "postinstall": "prisma generate",
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
